syntax = "proto3";
package trstlabs.trst.trst;


import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";
//import "trst/estimator.proto";
//import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/trstlabs/trst/x/item/types";

message Item {
  string creator = 1;
  uint64 id = 3;
  string title = 4; 
  string description = 5; 
  string status = 6; 
  Estimation estimation = 7;
  ListingDuration listing_duration = 8;
  Transfer transfer = 9;
  Properties properties = 10;
}

message Estimation {
  int64 estimation_price = 1; 
  string best_estimator = 2; 
  int64 estimation_count = 3; 
  int64 estimation_total = 4;
  repeated string estimator_list = 5; 
  repeated int64 estimation_list = 6; 
  repeated string comments = 7; 
  int64 deposit_amount = 8;
  string contract = 9;
  int64 flags = 10; 
}

message ListingDuration {
  google.protobuf.Timestamp submit_time = 1
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp end_time = 2
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message Transfer {
  int64 shipping_cost = 1;
  string location = 2; 
  bool tracking = 3; 
  repeated string shipping_region = 4; 
  int64 rating = 5; 
  string note = 6;
  int64 discount = 7;
  string buyer = 8; 
  string seller = 9;
}

message Properties {
  int64 condition = 1; 
  repeated string photos = 2;
  bool is_token = 3;
  bool estimation_only  = 4;
  repeated string tags = 5;
  string token_uri = 6; 
  bool transferable = 7; 
}


message MsgCreateItem {
  string creator = 1;
  string title = 2; 
  string description = 3; 
  int64 shipping_cost = 4; 
  string location = 5; 
  int64 estimation_count = 6; 
  repeated string tags = 7; 
  int64 condition = 8; 
  repeated string shipping_region = 9; 
  int64 deposit_amount = 10;
  bytes init_msg = 11;
  bytes auto_msg = 12;
  repeated string photos = 13;
  string token_uri = 14; 
}

message MsgUpdateItem {
  string seller = 1;
  uint64 id = 2;
  int64 shipping_cost = 3;
  string location = 4; 
  repeated string shipping_region = 5; 
}

message MsgDeleteItem {
  string seller = 1;
  uint64 id = 2;
}

message MsgRevealEstimation {
    string creator = 1;
  uint64 itemid = 2;
  bytes reveal_msg = 3;

}

message MsgItemTransferable {
    string seller = 1;
    bytes transferable_msg = 2;
  uint64 itemid = 3;
}
message MsgItemShipping {
  string seller = 1;
  bool tracking = 2;
  uint64 itemid = 3;

}

message MsgItemResell {
  string seller = 1;
  uint64 itemid = 2;
  int64 shipping_cost = 3;
  int64 discount = 4;
  string location = 5;
  repeated string shipping_region = 6; 
  string note = 7;
}


// ActiveParams defines the params for activeness of items on governance proposals.
message Params {
   option (gogoproto.goproto_stringer) = false;
  //  Maximum period for trst holders to buy an item. Initial value: 2
  //  months.
  google.protobuf.Duration MaxActivePeriod = 1 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "max_active_period,omitempty"
  ];
  int64 MaxEstimatorCreatorRatio = 2;
  int64 EstimationRatioForNewItem = 3;
  int64 CreateItemFee = 4;
  int64 MaxBuyerReward = 5;

}

message MsgTokenizeItem {
  string sender = 1;
  uint64 id = 3;
}

message MsgUnTokenizeItem {
  string sender = 1;
  uint64 id = 3;
}